--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,23 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
+#root {
+   height: 100%;
+}
+.App{
+  height: 100%;
+}
+.router {
+  height: 100%;
+}
+
+/*通用样式*/
 .ta-c {
   text-align: center;
 }
