--- a/src/container/Dashboard/dashboard.scss
+++ b/src/container/Dashboard/dashboard.scss
@@ -6,6 +6,7 @@
     .main {
         flex: 1;        
         padding-top: 20px;
+        overflow: auto
     }
     .am-tab-bar {
         height: auto;
